<resources>
    <string name="app_name">03.10</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_4">4</string>
    <string name="txt_5">5</string>
    <string name="txt_6">6</string>
    <string name="txt_7">7</string>
    <string name="txt_8">8</string>
    <string name="txt_9">9</string>
    <string name="txt_0">0</string>
    <string name="txt_mul">x</string>
    <string name="txt_div">%</string>
    <string name="txt_plus">+</string>
    <string name="txt_min">-</string>
    <string name="txt_eq">=</string>
    <string name="txt_point">.</string>
</resources>